syntax = "proto3";
package internal.conf;

option go_package = "github.com/go-leo/leo/v3/example/configs/v1;configs";

import "google/protobuf/duration.proto";
import "leo/config/annotations.proto";
import "leo/cqrs/annotations.proto";

message HTTP {
    string network = 1;
    string addr = 2;
    google.protobuf.Duration timeout = 3;
}
message GRPC {
    string network = 1;
    string addr = 2;
    google.protobuf.Duration timeout = 3;
}

message Database {
    string driver = 1;
    string source = 2;
}
message Redis {
    string network = 1;
    string addr = 2;
    string password = 3;
    int32 db = 4;
    google.protobuf.Duration dial_timeout = 5;
    google.protobuf.Duration read_timeout = 6;
    google.protobuf.Duration write_timeout = 7;
}

message Application {
    option (leo.config.application) = true;
    HTTP http = 1;
    GRPC grpc = 2;
    Database database = 3;
    Redis redis = 4;
}
